<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="12dp">


    <TextView
        android:id="@+id/tvNameRepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/nunito"
        android:text="@string/aplikasi_github_user"
        android:textColor="@color/colorNameRepository"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescRepo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="@string/descRepo"
        android:textStyle="normal"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameRepo" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/java"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescRepo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_star"
        android:text="@string/_10"
        android:textColor="@color/colorPrimary"
        android:drawableTint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/tvLanguage"
        app:layout_constraintTop_toBottomOf="@id/tvDescRepo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/tvStar"/>
    <TextView
        android:id="@+id/tvTimeRepo"
        app:layout_constraintStart_toEndOf="@id/tvStar"
        app:layout_constraintTop_toBottomOf="@id/tvDescRepo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/updatee"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btStarRepo"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_favorite"
        android:drawableStart="@drawable/ic_star"
        android:drawableTint="@android:color/secondary_text_light"
        android:includeFontPadding="false"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/star"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btUnStarRepo"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_favorite"
        android:drawableStart="@drawable/ic_star_full"
        android:drawableTint="@android:color/secondary_text_light"
        android:includeFontPadding="false"
        android:padding="5dp"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:text="@string/unstar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tvLanguage"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>